Use pinentry-curses

--- a/gnupg/gpg-agent.conf
+++ b/gnupg/gpg-agent.conf
@@ -1,4 +1,4 @@
 allow-loopback-pinentry
 default-cache-ttl 300
 max-cache-ttl 999999
-pinentry-program /usr/bin/pinentry-gtk-2
+pinentry-program /usr/bin/pinentry-curses
