--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,24 @@
 [submodule "AUR/fzf"]
 	path = AUR/fzf
 	url = https://aur.archlinux.org/fzf.git
+[submodule "AUR/thinkfan"]
+	path = AUR/thinkfan
+	url = https://aur.archlinux.org/thinkfan.git
+[submodule "AUR/tor-browser-en"]
+	path = AUR/tor-browser-en
+	url = https://aur.archlinux.org/tor-browser-en.git
+[submodule "AUR/goobook-git"]
+	path = AUR/goobook-git
+	url = https://aur.archlinux.org/goobook-git.git
+[submodule "AUR/yeganesh-cabal"]
+	path = AUR/yeganesh-cabal
+	url = https://aur.archlinux.org/yeganesh-cabal.git
+[submodule "AUR/nethack-nao"]
+	path = AUR/nethack-nao
+	url = https://aur.archlinux.org/nethack-nao.git
+[submodule "AUR/conky-lua"]
+	path = AUR/conky-lua
+	url = https://aur.archlinux.org/conky-lua.git
+[submodule "AUR/proggyfonts"]
+	path = AUR/proggyfonts
+	url = https://aur.archlinux.org/proggyfonts.git
