Update GTK+ configuration
Change and homogenize the themes and icon themes for GTK+ 2 and 3; add
modelines to both configuration files.

--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,5 +1,7 @@
 [Settings]
-; gtk-icon-theme-name = Adwaita
-; gtk-theme-name = Adwaita
+gtk-icon-theme-name = Faience
+gtk-theme-name = Numix
 gtk-font-name = Ubuntu 7
-gtk-application-prefer-dark-theme = true
+gtk-application-prefer-dark-theme = false
+
+; vim: tw=90 sts=-1 sw=3 et
