i3: add keybind for the `sticky` command
http://i3wm.org/docs/userguide.html#_sticky_floating_windows

--- a/config/i3/config
+++ b/config/i3/config
@@ -34,6 +34,8 @@ bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 
+bindsym $mod+t sticky toggle
+
 # Move focused window.
 bindsym $mod+Shift+h move left
 bindsym $mod+Shift+j move down
