--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "AUR/i3-gaps-git"]
 	path = AUR/i3-gaps-git
 	url = https://aur.archlinux.org/i3-gaps-git.git
+[submodule "AUR/neofetch-git"]
+	path = AUR/neofetch-git
+	url = https://aur.archlinux.org/neofetch-git.git
