--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "AUR/asciinema"]
 	path = AUR/asciinema
 	url = https://aur.archlinux.org/asciinema.git
+[submodule "AUR/cli-visualizer"]
+	path = AUR/cli-visualizer
+	url = https://aur.archlinux.org/cli-visualizer.git
