--- a/config/i3/config
+++ b/config/i3/config
@@ -20,13 +20,13 @@ bindsym $mod+q kill
 bindsym $mod+c kill
 
 # Run yeganesh (dmenu wrapper).
-bindsym $mod+r exec --no-startup-id "$(yeganesh -x -- -b -f -fn 'Dina-5:style=regular' -nb Black -sb '#600000')"
+bindsym $mod+r exec --no-startup-id "$(yeganesh -x -- -b -f -fn 'Dina-5:style=regular' -nb '#000000' -nf '#dfdfdf' -sb '#d75f5f' -sf '#ffffff')"
 
 # Run clipmenu.
-bindsym $mod+y exec --no-startup-id clipmenu -b -f -fn 'Dina-5:style=regular' -nb Black -sb '#006000'
+bindsym $mod+y exec --no-startup-id clipmenu -b -f -fn 'Dina-5:style=regular' -nb '#000000' -nf '#dfdfdf' -sb '#87af5f' -sf '#000000'
 
 # Run passmenu.
-bindsym $mod+p exec --no-startup-id env PINENTRY_USER_DATA=gtk passmenu --type -b -f -fn 'Dina-5:style=regular' -nb Black -sb '#000060'
+bindsym $mod+p exec --no-startup-id env PINENTRY_USER_DATA=gtk passmenu --type -b -f -fn 'Dina-5:style=regular' -nb '#000000' -nf '#dfdfdf' -sb '#8787af' -sf '#ffffff'
 
 # Change focus.
 bindsym $mod+h focus left
