--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "AUR/j4-dmenu-desktop"]
 	path = AUR/j4-dmenu-desktop
 	url = https://aur.archlinux.org/j4-dmenu-desktop.git
+[submodule "AUR/clipmenu"]
+	path = AUR/clipmenu
+	url = https://aur.archlinux.org/clipmenu.git
