--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -1,5 +1,5 @@
 # MPD configuration.  An example configuration is at /usr/share/doc/mpd/mpdconf.example.
-# The manual is at http://www.musicpd.org/doc/user/.  Also mpd(1), mpd.conf(5) and
+# The manual is at http://www.musicpd.org/doc/user/.  Also see mpd(1), mpd.conf(5) and
 # https://wiki.archlinux.org/index.php/Music_Player_Daemon.
 
 music_directory "~/music"
