Use same default font for Termite as for XTerm
I thought it couldn't use bitmap fonts.

--- a/config/termite/config
+++ b/config/termite/config
@@ -1,5 +1,6 @@
 [options]
-font = Ubuntu Mono 7
+# font = Ubuntu Mono 7
+font = Dina 5
 dynamic_title = true
 audible_bell = false
 urgent_on_bell = true
