Disable MPD's output for cli-visualizer by default
Usually cli-visualizer isn't running so this output shouldn't be enabled
when MPD is started.  It probably increases system load or causes
unnecessary disk writes.

--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -22,13 +22,15 @@ audio_output {
    name "HDA ATI SB"
 }
 
-# Provide output for cli-visualizer (`vis`).  See
+# Provide output for cli-visualizer (`vis`).  Disabled when MPD is started.  Enable with
+# `mpc enable 2`. See
 # https://github.com/dpayne/cli-visualizer/blob/master/README.md#mpd-setup.
 audio_output {
-   type   "fifo"
-   name   "my_fifo"
-   path   "/tmp/mpd.fifo"
-   format "44100:16:2"
+   type    "fifo"
+   name    "my_fifo"
+   path    "/tmp/mpd.fifo"
+   format  "44100:16:2"
+   enabled "no"
 }
 
 # vim: tw=90 sts=-1 sw=3 et
