Use z and improve handling of PROMPT_COMMAND
z(1) jumps to frecent directories (https://github.com/rupa/z).
Overriding PROMPT_COMMAND broke it.

--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "AUR/cower"]
 	path = AUR/cower
 	url = https://aur.archlinux.org/cower.git
+[submodule "AUR/z-git"]
+	path = AUR/z-git
+	url = https://aur.archlinux.org/z-git.git
