--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "AUR/z-git"]
 	path = AUR/z-git
 	url = https://aur.archlinux.org/z-git.git
+[submodule "AUR/git-crypt"]
+	path = AUR/git-crypt
+	url = https://aur.archlinux.org/git-crypt.git
