Add submodule for imgurbash package build
https://aur.archlinux.org/packages/imgurbash
https://github.com/tremby/imgur.sh

--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "AUR/git-crypt"]
 	path = AUR/git-crypt
 	url = https://aur.archlinux.org/git-crypt.git
+[submodule "AUR/imgurbash"]
+	path = AUR/imgurbash
+	url = https://aur.archlinux.org/imgurbash.git
