Add submodule for Universal Ctags package build
Universal Ctags is a fork of Exuberant Ctags (which is inactive).  For
example, it has a new C++ parser.

https://aur.archlinux.org/packages/universal-ctags-git
https://github.com/universal-ctags/ctags

--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "AUR/imgurbash"]
 	path = AUR/imgurbash
 	url = https://aur.archlinux.org/imgurbash.git
+[submodule "AUR/universal-ctags-git"]
+	path = AUR/universal-ctags-git
+	url = https://aur.archlinux.org/universal-ctags-git.git
