Add submodule for firefox-developer package build
As of version 48, it isn't possible to install unsigned add-ons in
branded release or beta builds of Firefox.

https://aur.archlinux.org/packages/firefox-developer

--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "emacs.d/emacs-vim-modeline"]
 	path = emacs.d/emacs-vim-modeline
 	url = https://github.com/cinsk/emacs-vim-modeline
+[submodule "AUR/firefox-developer"]
+	path = AUR/firefox-developer
+	url = https://aur.archlinux.org/firefox-developer.git
