--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -7,4 +7,4 @@ gtk-application-prefer-dark-theme = false
 # The cursor shouldn't blink.
 gtk-cursor-blink = 0
 
-; vim: tw=90 sts=-1 sw=3 et
+# vim: tw=90 sts=-1 sw=3 et cms=#%s
