Add submodule for signal-cli package build
https://aur.archlinux.org/packages/signal-cli
https://github.com/AsamK/signal-cli

Also add a submodule for the [package build][1] of
[libmatthew-unix-java][2], which is [needed for D-Bus support][3].

[1]: https://aur.archlinux.org/packages/libmatthew-unix-java
[2]: http://www.matthew.ath.cx/projects/java/
[3]: https://github.com/AsamK/signal-cli#dbus-service

--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,9 @@
 [submodule "AUR/firefox-developer"]
 	path = AUR/firefox-developer
 	url = https://aur.archlinux.org/firefox-developer.git
+[submodule "AUR/libmatthew-unix-java"]
+	path = AUR/libmatthew-unix-java
+	url = https://aur.archlinux.org/libmatthew-unix-java.git
+[submodule "AUR/signal-cli"]
+	path = AUR/signal-cli
+	url = https://aur.archlinux.org/signal-cli.git
