Add submodule for neomutt package build
https://aur.archlinux.org/packages/neomutt
https://neomutt.org
https://github.com/neomutt/neomutt

--- a/.gitmodules
+++ b/.gitmodules
@@ -94,3 +94,6 @@
 [submodule "signal-cli.bash"]
 	path = signal-cli.bash
 	url = https://github.com/meribold/signal-cli.bash.git
+[submodule "AUR/neomutt"]
+	path = AUR/neomutt
+	url = https://aur.archlinux.org/neomutt.git
