Vim: add ".add" spell files
These are word lists which Vim updates when using the `zg` and `zw`
mappings etc.

The ".add" files aren't read directly by Vim.  Instead, associated
binary ".add.spl" files are used.  Vim automatically creates and updates
those when it changes the corresponding ".add" file; e.g., when using
`zg` or commands like `:spellgood`.  After a ".add" file is changed in
another way, the `:mkspell` command should be used.

See `:h spellfile`, `:h :mkspell`, and `:h spell.txt`.

The files are encrypted with [git-crypt][1].

[1]: https://github.com/AGWA/git-crypt

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 mutt/per-recipient-rules filter=git-crypt diff=git-crypt
+vim/spell/de.utf-8.add filter=git-crypt diff=git-crypt
+vim/spell/en.utf-8.add filter=git-crypt diff=git-crypt
