--- a/config/i3/config
+++ b/config/i3/config
@@ -156,4 +156,8 @@ smart_gaps on
 
 exec --no-startup-id ~/dotfiles/config/i3/startup.sh
 
+# Always start Firefox on workspace 1 so I can switch to another workspace while waiting
+# for it to start.  See <http://i3wm.org/docs/userguide.html#assign_workspace>.
+assign [class="^Firefox$"] 1
+
 # vim: tw=90 sts=-1 sw=3 et fdm=marker
