MPD: rename the audio output used by `vis`
https://github.com/dpayne/cli-visualizer

--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -22,12 +22,11 @@ audio_output {
    name "HDA ATI SB"
 }
 
-# Provide output for cli-visualizer (`vis`).  Disabled when MPD is started.  Enable with
-# `mpc enable 2`.  See
-# https://github.com/dpayne/cli-visualizer/blob/master/README.md#mpd-setup.
+# Output for cli-visualizer.  Disabled when MPD is started.  Enable with `mpc enable 2` or
+# `mpc enable vis`.  See <https://github.com/dpayne/cli-visualizer#mpd-setup>.
 audio_output {
    type    "fifo"
-   name    "my_fifo"
+   name    "vis"
    path    "/tmp/mpd.fifo"
    format  "44100:16:2"
    enabled "no"
