Wrap some links in mpd.conf in angle brackets
See e90fdc8a62ce165f5b4f5cf3c0481b84a7ca27d0.

--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -1,6 +1,6 @@
-# MPD configuration.  An example configuration is at /usr/share/doc/mpd/mpdconf.example.
-# The manual is at http://www.musicpd.org/doc/user/.  Also see mpd(1), mpd.conf(5) and
-# https://wiki.archlinux.org/index.php/Music_Player_Daemon.
+# MPD configuration.  An example configuration is at </usr/share/doc/mpd/mpdconf.example>.
+# The manual is at <http://www.musicpd.org/doc/user/>.  Also see mpd(1), mpd.conf(5) and
+# <https://wiki.archlinux.org/index.php/Music_Player_Daemon>.
 
 music_directory "~/music"
 
