MPD: rename the main (ALSA) audio output
This name is easier to use with `mpc enable` and `mpc disable`.

--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -19,7 +19,7 @@ input {
 
 audio_output {
    type "alsa"
-   name "HDA ATI SB"
+   name "alsa"
 }
 
 # Output for cli-visualizer.  Disabled when MPD is started.  Enable with `mpc enable 2` or
