Add submodule for lostfiles package build
https://aur.archlinux.org/packages/lostfiles
https://github.com/graysky2/lostfiles
https://wiki.archlinux.org/index.php/Pacman/Tips_and_tricks#Identify_files_not_owned_by_any_package

--- a/.gitmodules
+++ b/.gitmodules
@@ -118,3 +118,6 @@
 [submodule "AUR/ttf-google-fonts-git"]
 	path = AUR/ttf-google-fonts-git
 	url = https://aur.archlinux.org/ttf-google-fonts-git.git
+[submodule "AUR/lostfiles"]
+	path = AUR/lostfiles
+	url = https://aur.archlinux.org/lostfiles.git
