Add submodule for translate-shell package build
https://aur.archlinux.org/packages/translate-shell
https://github.com/soimort/translate-shell

--- a/.gitmodules
+++ b/.gitmodules
@@ -121,3 +121,6 @@
 [submodule "AUR/lostfiles"]
 	path = AUR/lostfiles
 	url = https://aur.archlinux.org/lostfiles.git
+[submodule "AUR/translate-shell"]
+	path = AUR/translate-shell
+	url = https://aur.archlinux.org/translate-shell.git
