AUR submodules: use stable Neofetch package build
Replace `neofetch-git` package build with `neofetch` one.

https://aur.archlinux.org/packages/neofetch-git
https://aur.archlinux.org/packages/neofetch
https://github.com/dylanaraps/neofetch

--- a/.gitmodules
+++ b/.gitmodules
@@ -43,9 +43,9 @@
 [submodule "AUR/i3-gaps-git"]
 	path = AUR/i3-gaps-git
 	url = https://aur.archlinux.org/i3-gaps-git.git
-[submodule "AUR/neofetch-git"]
-	path = AUR/neofetch-git
-	url = https://aur.archlinux.org/neofetch-git.git
+[submodule "AUR/neofetch"]
+	path = AUR/neofetch
+	url = https://aur.archlinux.org/neofetch.git
 [submodule "AUR/cli-visualizer"]
 	path = AUR/cli-visualizer
 	url = https://aur.archlinux.org/cli-visualizer.git
