Make DOSBox (and other SDL programs) use ALSA

--- a/home/dosbox/dosbox-0.74.conf
+++ b/home/dosbox/dosbox-0.74.conf
@@ -1,6 +1,6 @@
 # DOSBox 0.74 Configuration
 #
-# See [1] and [2].  FIXME: use ALSA so MPD can play sound at the same time as DOSBox.
+# See [1] and [2].
 #
 # [1]: https://wiki.archlinux.org/index.php/DOSBox
 # [2]: http://www.dosbox.com/wiki/Dosbox.conf
