--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -28,6 +28,17 @@ bindsym $mod+y exec --no-startup-id clipmenu -b -f -fn 'Dina-5:style=regular' -n
 # Run passmenu.
 bindsym $mod+p exec --no-startup-id env PINENTRY_USER_DATA=gtk passmenu --type -b -f -fn 'Dina-5:style=regular' -nb '#000000' -nf '#dfdfdf' -sb '#8787af' -sf '#ffffff'
 
+# Start an xterm and run muccadoro [1], a pomodoro [2] timer.  By the way, using `-class`
+# instead of `-title` would mean all my X resources aren't applied to the xterm.  We could
+# also use `xterm -name muccadoro ...` and `for_window [instance="muccadoro] ...`.  The
+# "entire command must be quoted" because it "contains a ; (semicolon)" [3].
+#
+bindsym $mod+Shift+p exec --no-startup-id "xterm -title muccadoro -geometry 28x13 -e 'muccadoro | tee -ai ~/pomodoros.txt; read -n 1'"
+for_window [title="muccadoro"] floating enable
+# [1]: https://github.com/meribold/muccadoro
+# [2]: https://en.wikipedia.org/wiki/Pomodoro_Technique
+# [3]: https://i3wm.org/docs/userguide.html#exec
+
 # Change focus.
 bindsym $mod+h focus left
 bindsym $mod+j focus down
