--- a/home/.gitattributes
+++ b/home/.gitattributes
@@ -1,4 +1,4 @@
-config/newsbeuter/urls filter=git-crypt diff=git-crypt
+config/newsboat/urls filter=git-crypt diff=git-crypt
 mutt/aliases filter=git-crypt diff=git-crypt
 mutt/per-recipient-rules filter=git-crypt diff=git-crypt
 vim/spell/de.utf-8.add filter=git-crypt diff=git-crypt
