git-crypt: readd Newsbeuter's `urls` file
Removing `config/newsbeuter/urls` from the gitattributes file broke
displaying diffs of some old commits (e.g. `git show aa92bfe3c0a60b8e`).

--- a/home/.gitattributes
+++ b/home/.gitattributes
@@ -1,3 +1,4 @@
+config/newsbeuter/urls filter=git-crypt diff=git-crypt
 config/newsboat/urls filter=git-crypt diff=git-crypt
 mutt/aliases filter=git-crypt diff=git-crypt
 mutt/per-recipient-rules filter=git-crypt diff=git-crypt
