--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -170,5 +170,6 @@ exec --no-startup-id ~/dotfiles/home/config/i3/startup.sh
 # Always start Firefox on workspace 1 so I can switch to another workspace while waiting
 # for it to start.  See <http://i3wm.org/docs/userguide.html#assign_workspace>.
 assign [class="^Firefox$"] 1
+assign [class="^Firefox Developer Edition$"] 1
 
 # vim: tw=90 sts=-1 sw=3 et fdm=marker
