--- a/home/.gitattributes
+++ b/home/.gitattributes
@@ -1,5 +1,6 @@
 config/newsbeuter/urls filter=git-crypt diff=git-crypt
 config/newsboat/urls filter=git-crypt diff=git-crypt
+config/signal/init.bash filter=git-crypt diff=git-crypt
 mutt/aliases filter=git-crypt diff=git-crypt
 mutt/per-recipient-rules filter=git-crypt diff=git-crypt
 vim/spell/de.utf-8.add filter=git-crypt diff=git-crypt
