--- a/home/gnupg/gpg-agent.conf
+++ b/home/gnupg/gpg-agent.conf
@@ -1,4 +1,4 @@
 allow-loopback-pinentry
 default-cache-ttl 1800
 max-cache-ttl 999999
-pinentry-program /usr/bin/pinentry
+pinentry-program /usr/local/bin/pinentry
