Newsboat: fix issues when Firefox isn't running
When using one of the key bindings for opening articles in Firefox while
Firefox isn't running yet, bad stuff happens: Firefox starts in the
foreground and blocks Newsboat.  This commit should fix that.

--- a/home/config/newsboat/config
+++ b/home/config/newsboat/config
@@ -1,4 +1,4 @@
-browser $BROWSER
+browser "nohup $FIREFOX --new-tab %u &>/dev/null &"
 datetime-format "%F"  # ISO 8601
 refresh-on-startup yes
 reload-threads 42
