Use rofi-pass instead of passmenu
https://github.com/meribold/rofi-pass
https://github.com/carnager/rofi-pass
https://git.zx2c4.com/password-store/tree/contrib/dmenu/passmenu

--- a/.gitmodules
+++ b/.gitmodules
@@ -121,3 +121,6 @@
 [submodule "misc/muccadoro"]
 	path = misc/muccadoro
 	url = https://github.com/meribold/muccadoro.git
+[submodule "misc/rofi-pass"]
+	path = misc/rofi-pass
+	url = https://github.com/meribold/rofi-pass.git
