Add submodule for freedict-tools package build
The FreeDict package builds in the AUR (e.g. [3] and [4]) require this
package as a build-time dependency now.

[1]: https://aur.archlinux.org/packages/freedict-tools
[2]: https://github.com/freedict/tools
[3]: https://aur.archlinux.org/packages/dict-freedict-deu-eng
[4]: https://aur.archlinux.org/packages/dict-freedict-eng-deu

--- a/.gitmodules
+++ b/.gitmodules
@@ -124,3 +124,6 @@
 [submodule "misc/rofi-pass"]
 	path = misc/rofi-pass
 	url = https://github.com/meribold/rofi-pass.git
+[submodule "misc/AUR/freedict-tools"]
+	path = misc/AUR/freedict-tools
+	url = https://aur.archlinux.org/freedict-tools.git
